--- a/styles.css
+++ b/styles.css
@@ -18,37 +18,37 @@ body {
 }
 
 
-.drum[data-key="87"] {
+.J {
   background-image: url('images/crash.png');
   background-size: cover;
 }
 
-.drum[data-key="65"] {
+.K {
   background-image: url('images/kick.png');
   background-size: cover;
 }
 
-.drum[data-key="83"] {
+.L {
   background-image: url('images/snare.png');
   background-size: cover;
 }
 
-.drum[data-key="68"] {
+.W {
   background-image: url('images/tom1.png');
   background-size: cover;
 }
 
-.drum[data-key="74"] {
+.A {
   background-image: url('images/tom2.png');
   background-size: cover;
 }
 
-.drum[data-key="75"] {
+.S {
   background-image: url('images/tom3.png');
   background-size: cover;
 }
 
-.drum[data-key="76"] {
+.D {
   background-image: url('images/tom4.png');
   background-size: cover;
 }
@@ -82,6 +82,15 @@ body {
   justify-content: center;
   transition: transform 0.2s ease-out, box-shadow 0.2s ease-out, background-color 0.2s ease-out;
 }
+
+.drum:focus {
+  transform: scale(1.1);
+  transition: 0.2s ease-out;
+  box-shadow: 0 0 20px rgba(218, 4, 99, 0.8);
+  background-color: #333333;
+  color : #fff;
+}
+
 
 .drum:hover {
   transform: scale(1.1);
